# gateway-proto

./: .gitignore  Cargo.toml  README.md  build.rs  go.mod  go.sum  justfile
.github/: actionlint.yaml
.github/workflows/: ci.yaml
cmd/gwtestctl/: main.go
config/docker/gwtestctl/: Dockerfile
dataplane-rpc/: dataplane_grpc.proto
grpc/: dataplane_grpc.proto
hack/: tools.just
pkg/dataplane/: dataplane.mock.go  dataplane.pb.go  dataplane_grpc.pb.go  dataplane_test.go
pkg/gwtestctl/: client.go  server.go
pkg/protoyaml/: encode.go  encode_test.go
proto/: dataplane.proto
src/: lib.rs
src/bolero/: bgp.rs  device.rs  expose.rs  gateway_config.rs  impl_peering_as.rs  impl_peering_i_ps.rs  interface.rs  mod.rs  support.rs  test_support.rs  vpc.rs  vrf.rs
tests/: simple_test.rs
