[package]
name = "gateway-config"
version = "0.1.0"
edition = "2021"
liciense = "Apache-2.0"

[features]
default = []
regenerate = ["dep:tonic-build"]

[dependencies]
tonic = "0.13"
prost = "0.13.5"
tokio = { version = "1.34", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tower = "0.5.2"
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies.tonic-build]
version = "0.13"
optional = true
